Drag and drop on layer selector

--- a/TileEditor/TileEditor.csproj
+++ b/TileEditor/TileEditor.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+    <PackageReference Include="gong-wpf-dragdrop" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
